Add missing @terrazzo/parser deps
All plugins have either runtime or public type dependencies on
@terrazzo/parser (or both)

--- a/packages/plugin-css-in-js/package.json
+++ b/packages/plugin-css-in-js/package.json
@@ -46,6 +46,7 @@
   },
   "peerDependencies": {
     "@terrazzo/cli": "workspace:^",
+    "@terrazzo/parser": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^"
   },
   "dependencies": {
