--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -36,7 +36,8 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "workspace:^"
+    "@terrazzo/cli": "workspace:^",
+    "@terrazzo/parser": "workspace:^"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^",
