--- a/packages/plugin-vanilla-extract/package.json
+++ b/packages/plugin-vanilla-extract/package.json
@@ -38,6 +38,7 @@
   },
   "peerDependencies": {
     "@terrazzo/cli": "workspace:^",
+    "@terrazzo/parser": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^"
   },
   "dependencies": {
