--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -37,6 +37,7 @@
   },
   "peerDependencies": {
     "@terrazzo/cli": "workspace:^",
+    "@terrazzo/parser": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^"
   },
   "dependencies": {
