--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -37,6 +37,7 @@
   },
   "peerDependencies": {
     "@terrazzo/cli": "workspace:^",
+    "@terrazzo/parser": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^",
     "tailwindcss": "^4.0.0"
   },
