fix(tailwind): use kebab-case for variable names (terrazzoapp#629)
lint

--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -39,6 +39,7 @@
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/parser": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^",
+    "@terrazzo/token-tools": "workspace:^",
     "tailwindcss": "^4.0.0"
   },
   "dependencies": {
