--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-js",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Use DTCG tokens in Node.js for server-rendered applications.",
   "license": "MIT",
   "type": "module",
