--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -55,14 +55,14 @@
     "chokidar": "^3.6.0",
     "detect-package-manager": "^3.0.2",
     "dotenv": "^16.6.1",
-    "dtcg-examples": "^1.x",
+    "dtcg-examples": "^1.0.2",
     "escodegen": "^2.1.0",
     "merge-anything": "^5.1.7",
     "meriyah": "^6.1.4",
     "mime": "^4.1.0",
     "picocolors": "^1.1.1",
     "vite": "catalog:",
-    "vite-node": "^5.2.0",
+    "vite-node": "^5.3.0",
     "yaml-to-momoa": "catalog:"
   },
   "devDependencies": {
