--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - main
 
 permissions:
+  id-token: write # Required for npm publish https://docs.npmjs.com/trusted-publishers
   contents: write
   pull-requests: write
 
