Replace Culori with Color.js

--- a/packages/plugin-swift/package.json
+++ b/packages/plugin-swift/package.json
@@ -40,11 +40,10 @@
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^",
-    "culori": "catalog:"
+    "colorjs.io": "catalog:"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:*",
-    "@terrazzo/parser": "workspace:^",
-    "@types/culori": "catalog:"
+    "@terrazzo/parser": "workspace:^"
   }
 }
