--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -47,8 +47,7 @@
     "@terrazzo/json-schema-tools": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
     "@types/babel__code-frame": "^7.27.0",
-    "@types/culori": "catalog:",
-    "culori": "catalog:",
+    "colorjs.io": "catalog:",
     "fast-deep-equal": "^3.1.3",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
