--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@terrazzo/react-color-picker",
-  "version": "0.1.3",
-  "description": "React color picker that supports Color Module 4, wide color gamut (WCG), and Display-P3 using WebGL for monitor-accurate colors. Powered by Culori.",
+  "version": "0.2.0",
+  "description": "React color picker that supports Color Module 4, wide color gamut (WCG), and Display-P3 using WebGL for monitor-accurate colors. Powered by colorjs.io.",
   "license": "MIT",
   "type": "module",
   "author": {
@@ -36,7 +36,7 @@
     "lint:css": "stylelint \"src/**/*.css\""
   },
   "peerDependencies": {
-    "culori": "^4.0.0",
+    "colorjs.io": "^0.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -52,12 +52,11 @@
     "@size-limit/preset-small-lib": "^11.2.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
-    "@types/culori": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "chokidar-cli": "^3.0.0",
-    "culori": "catalog:",
+    "colorjs.io": "catalog:",
     "jsdom": "^24.1.3",
     "react": "catalog:",
     "react-dom": "catalog:",
