--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -22,12 +22,11 @@
     "@terrazzo/tiles": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "@types/culori": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "@vitest/coverage-v8": "catalog:",
-    "culori": "catalog:",
+    "colorjs.io": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "storybook": "^10.2.6"
