--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -45,10 +45,7 @@
   },
   "dependencies": {
     "@humanwhocodes/momoa": "catalog:",
-    "culori": "catalog:",
+    "colorjs.io": "catalog:",
     "wildcard-match": "^5.1.4"
-  },
-  "devDependencies": {
-    "@types/culori": "catalog:"
   }
 }
