--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,14 +16,13 @@ catalog:
   '@swc/core-win32-arm64-msvc': 1.13.19
   '@swc/core-win32-ia32-msvc': 1.13.19
   '@swc/core-win32-x64-msvc': 1.13.19
-  '@types/culori': ^4.0.1
   '@types/react': ^19.2.11
   '@types/react-dom': ^19.2.3
   '@vitejs/plugin-react-swc': ^4.2.3
   '@vitest/browser': ^4.0.18
   '@vitest/browser-playwright': ^4.0.18
   '@vitest/coverage-v8': ^4.0.18
-  culori: ^4.0.2
+  colorjs.io: ^0.6.1
   dtcg-examples: ^1.0.2
   playwright: ^1.58.1
   react: ^19.2.4
