Update react-color-picker and use-color

--- a/packages/use-color/tsconfig.json
+++ b/packages/use-color/tsconfig.json
@@ -5,5 +5,5 @@
     "noEmit": true,
     "outDir": "dist"
   },
-  "include": ["./*.{js,ts}", "./index.test.tsx"]
+  "include": ["./*.{js,ts}", "test/index.test.tsx"]
 }
