--- a/packages/use-color/package.json
+++ b/packages/use-color/package.json
@@ -16,7 +16,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "homepage": "https://terrazzo.app/docs/components/color-picker",
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
     "directory": "./packages/use-color/"
   },
   "scripts": {
-    "build": "tsc --noEmit && size-limit && attw --profile esm-only --pack .",
+    "build": "rolldown -c && size-limit && attw --profile esm-only --pack .",
+    "dev": "rolldown --watch -c",
     "format": "biome check --fix --unsafe .",
     "lint": "biome check .",
     "test": "vitest run"
