--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -61,6 +61,7 @@
     "meriyah": "^6.1.4",
     "mime": "^4.1.0",
     "picocolors": "^1.1.1",
+    "scule": "^1.3.0",
     "vite": "catalog:",
     "vite-node": "^5.3.0",
     "yaml-to-momoa": "catalog:"
