--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,14 +51,12 @@
     "@terrazzo/json-schema-tools": "workspace:^",
     "@terrazzo/parser": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
-    "@types/escodegen": "^0.0.10",
-    "chokidar": "^3.6.0",
+    "chokidar": "^5.0.0",
     "detect-package-manager": "^3.0.2",
-    "dotenv": "^16.6.1",
-    "dtcg-examples": "^1.0.2",
+    "dtcg-examples": "catalog:",
     "escodegen": "^2.1.0",
     "merge-anything": "^5.1.7",
-    "meriyah": "^6.1.4",
+    "meriyah": "^7.1.0",
     "mime": "^4.1.0",
     "picocolors": "^1.1.1",
     "scule": "^1.3.0",
@@ -79,6 +77,7 @@
     "@swc/core-win32-arm64-msvc": "catalog:",
     "@swc/core-win32-ia32-msvc": "catalog:",
     "@swc/core-win32-x64-msvc": "catalog:",
+    "@types/escodegen": "^0.0.10",
     "@vitejs/plugin-react-swc": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
