--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -51,8 +51,7 @@
     "fast-deep-equal": "^3.1.3",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
-    "scule": "^1.3.0",
-    "wildcard-match": "^5.1.4"
+    "scule": "^1.3.0"
   },
   "peerDependencies": {
     "yaml-to-momoa": "catalog:"
