--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -40,8 +40,7 @@
     "@terrazzo/parser": "workspace:^"
   },
   "dependencies": {
-    "@terrazzo/token-tools": "workspace:^",
-    "wildcard-match": "^5.1.4"
+    "@terrazzo/token-tools": "workspace:^"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
