Fix @custom-variant syntax

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,7 @@
         "noSvgWithoutTitle": "off"
       },
       "complexity": {
+        "noUselessContinue": "off",
         "useArrowFunction": "off"
       },
       "correctness": {
