--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -62,6 +62,7 @@
     "scule": "^1.3.0",
     "vite": "catalog:",
     "vite-node": "^5.3.0",
+    "yaml": "^2.8.2",
     "yaml-to-momoa": "catalog:"
   },
   "devDependencies": {
