--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -40,7 +40,6 @@
     "react-dom": "^19.0.0"
   },
   "dependencies": {
-    "@radix-ui/react-popover": "^1.1.15",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/parser": "workspace:^",
@@ -50,7 +49,6 @@
     "@terrazzo/use-color": "workspace:^",
     "clsx": "^2.1.1",
     "dtcg-examples": "catalog:",
-    "jotai": "^2.18.0",
     "monaco-editor": "^0.52.2"
   },
   "devDependencies": {
@@ -58,7 +56,6 @@
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "react": "catalog:",
-    "react-dom": "catalog:",
-    "vite-plugin-sass-dts": "^1.3.35"
+    "react-dom": "catalog:"
   }
 }
