--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -27,9 +27,9 @@ catalog:
   playwright: ^1.58.2
   react: ^19.2.4
   react-dom: ^19.2.4
-  vite: ^7.3.1
+  vite: ^8.0.0-beta.15
   vitest: ^4.0.18
-  yaml-to-momoa: 0.0.8
+  yaml-to-momoa: 0.0.9
 
 onlyBuiltDependencies:
   - "@biomejs/biome"
