--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,20 +5,9 @@ packages:
 
 catalog:
   "@humanwhocodes/momoa": ^3.3.10
-  "@swc/core": 1.13.19
-  "@swc/core-darwin-arm64": 1.13.19
-  "@swc/core-darwin-x64": 1.13.19
-  "@swc/core-linux-arm-gnueabihf": 1.13.19
-  "@swc/core-linux-arm64-gnu": 1.13.19
-  "@swc/core-linux-arm64-musl": 1.13.19
-  "@swc/core-linux-x64-gnu": 1.13.19
-  "@swc/core-linux-x64-musl": 1.13.19
-  "@swc/core-win32-arm64-msvc": 1.13.19
-  "@swc/core-win32-ia32-msvc": 1.13.19
-  "@swc/core-win32-x64-msvc": 1.13.19
   "@types/react": ^19.2.14
   "@types/react-dom": ^19.2.3
-  "@vitejs/plugin-react-swc": ^4.2.3
+  "@vitejs/plugin-react-oxc": ^0.4.3
   "@vitest/browser": ^4.0.18
   "@vitest/browser-playwright": ^4.0.18
   "@vitest/coverage-v8": ^4.0.18
@@ -33,15 +22,6 @@ catalog:
 
 onlyBuiltDependencies:
   - "@biomejs/biome"
-  - "@swc/core"
-  - "@swc/core-darwin-arm64"
-  - "@swc/core-darwin-x64"
-  - "@swc/core-linux-arm64-gnu"
-  - "@swc/core-linux-arm-gnueabihf"
-  - "@swc/core-linux-x64-gnu"
-  - "@swc/core-linux-x64-musl"
-  - "@swc/core-win32-arm64-msvc"
-  - "@swc/core-win32-x64-msvc"
   - esbuild
   - sharp
 
