--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -49,20 +49,20 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.3.0",
-    "@size-limit/preset-small-lib": "^11.2.0",
+    "@size-limit/preset-small-lib": "^12.0.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react-swc": "catalog:",
+    "@vitejs/plugin-react-oxc": "catalog:",
     "chokidar-cli": "^3.0.0",
     "colorjs.io": "catalog:",
-    "jsdom": "^24.1.3",
+    "jsdom": "^28.1.0",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "rollup": "^4.57.1",
+    "rollup": "^4.59.0",
     "rollup-plugin-import-css": "^3.5.8",
-    "size-limit": "^11.2.0",
+    "size-limit": "^12.0.0",
     "vitest-axe": "^0.1.0"
   }
 }
