--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -54,7 +54,7 @@
     "@testing-library/react": "^16.3.2",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react-oxc": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
     "chokidar-cli": "^3.0.0",
     "colorjs.io": "catalog:",
     "jsdom": "^28.1.0",
