--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -53,12 +53,14 @@
   },
   "devDependencies": {
     "@tanstack/react-router": "^1.162.4",
+    "@tanstack/react-start": "^1.162.4",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vanilla-extract/css": "^1.18.0",
     "@vanilla-extract/vite-plugin": "^5.1.4",
-    "@vitejs/plugin-react-oxc": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "vite-tsconfig-paths": "^6.1.1"
   }
 }
