--- a/packages/use-color/package.json
+++ b/packages/use-color/package.json
@@ -44,7 +44,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react-oxc": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "size-limit": "^12.0.0"
