--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,27 +1,27 @@
 packages:
   - packages/**
   - www
-  - "!packages/**/test/**"
+  - '!packages/**/test/**'
 
 catalog:
-  "@humanwhocodes/momoa": ^3.3.10
-  "@types/react": ^19.2.14
-  "@types/react-dom": ^19.2.3
-  "@vitejs/plugin-react-oxc": ^0.4.3
-  "@vitest/browser": ^4.0.18
-  "@vitest/browser-playwright": ^4.0.18
-  "@vitest/coverage-v8": ^4.0.18
+  '@humanwhocodes/momoa': ^3.3.10
+  '@types/react': ^19.2.14
+  '@types/react-dom': ^19.2.3
+  '@vitejs/plugin-react': ^5.1.4
+  '@vitest/browser': ^4.0.18
+  '@vitest/browser-playwright': ^4.0.18
+  '@vitest/coverage-v8': ^4.0.18
   colorjs.io: ^0.6.1
   dtcg-examples: ^1.0.3
   playwright: ^1.58.2
   react: ^19.2.4
   react-dom: ^19.2.4
-  vite: ^8.0.0-beta.15
+  vite: 8.0.0-beta.15
   vitest: ^4.0.18
   yaml-to-momoa: 0.0.9
 
 onlyBuiltDependencies:
-  - "@biomejs/biome"
+  - '@biomejs/biome'
   - esbuild
   - sharp
 
