--- a/packages/tokens/src/colors-light.tokens.yml
+++ b/packages/tokens/src/colors-light.tokens.yml
@@ -47,6 +47,17 @@ color:
       $type: color
       $value: "{color.base.gray.300}"
 
+  icon:
+    100:
+      $type: color
+      $value: "{color.base.gray.500}"
+    200:
+      $type: color
+      $value: "{color.base.gray.600}"
+    selected:
+      $type: color
+      $value: "{color.base.lime.600}"
+
   text:
     1:
       $type: color
